--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,6 +11,8 @@ Django = "^3.2.5"
 djangorestframework = "^3.12.4"
 djangorestframework-simplejwt = "^4.7.2"
 djoser = "^2.1.0"
+Pillow = "^8.3.1"
+django-imagekit = "^4.0.2"
 
 [tool.poetry.dev-dependencies]
 black = "^21.6b0"
