--- a/deployment.yaml
+++ b/deployment.yaml
@@ -26,6 +26,14 @@ spec:
           volumeMounts:
             - name: data
               mountPath: /data
+      initContainers:
+        - name: db-migration
+          image: backend-image
+          args:
+            - migrate
+          volumeMounts:
+            - name: data
+              mountPath: /data
       volumes:
         - name: data
           persistentVolumeClaim:
@@ -44,22 +52,6 @@ spec:
         port: 80
         targetPort: http
 ---
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: application
-spec:
-  rules:
-  - http:
-      paths:
-      - path: /api
-        pathType: Prefix
-        backend:
-          service:
-            name: backend
-            port:
-              name: http
----
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -71,3 +63,65 @@ spec:
   resources:
     requests:
       storage: 8Gi
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: frontend-deployment
+  labels:
+    app: frontend
+spec:
+  selector:
+    matchLabels:
+      app: frontend
+  template:
+    metadata:
+      labels:
+        app: frontend
+    spec:
+      containers:
+        - name: frontend
+          image: frontend-image
+          resources:
+            limits:
+              memory: 1024Mi
+              cpu: 500m
+          ports:
+            - name: http
+              containerPort: 3000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: frontend
+spec:
+  selector:
+    app: frontend
+  ports:
+      - name: http
+        protocol: TCP
+        port: 80
+        targetPort: http
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: application
+spec:
+  rules:
+  - http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: frontend
+            port:
+              name: http
+      - path: /api
+        pathType: Prefix
+        backend:
+          service:
+            name: backend
+            port:
+              name: http
