Add Kube health checks for all deployments

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -20,6 +20,20 @@ spec:
             limits:
               memory: "256Mi"
               cpu: "500m"
+          livenessProbe:
+            httpGet:
+              path: /api/
+              port: http
+          readinessProbe:
+            httpGet:
+              path: /api/
+              port: http
+          startupProbe:
+            httpGet:
+              path: /api/
+              port: http
+            failureThreshold: 30
+            periodSeconds: 10
           ports:
             - name: http
               containerPort: 8000
@@ -86,6 +100,20 @@ spec:
             limits:
               memory: 1024Mi
               cpu: 500m
+          livenessProbe:
+            httpGet:
+              path: /
+              port: http
+          readinessProbe:
+            httpGet:
+              path: /
+              port: http
+          startupProbe:
+            httpGet:
+              path: /
+              port: http
+            failureThreshold: 30
+            periodSeconds: 10
           ports:
             - name: http
               containerPort: 80
@@ -127,6 +155,10 @@ data:
                 proxy_set_header Content-Length "";
                 proxy_set_header X-Original-URI $request_uri;
             }
+
+            location /health {
+              return 200 "healthy\n";
+            }
         }
     }
 ---
@@ -150,6 +182,20 @@ spec:
             limits:
               memory: "128Mi"
               cpu: "500m"
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: http
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: http
+          startupProbe:
+            httpGet:
+              path: /health
+              port: http
+            failureThreshold: 30
+            periodSeconds: 10
           ports:
             - name: http
               containerPort: 80
