--- a/deployment.yaml
+++ b/deployment.yaml
@@ -34,6 +34,12 @@ spec:
               port: http
             failureThreshold: 30
             periodSeconds: 10
+          env:
+            - name: DJANGO_SECRET_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: backend
+                  key: key
           ports:
             - name: http
               containerPort: 8000
@@ -45,6 +51,12 @@ spec:
           image: backend-image
           args:
             - migrate
+          env:
+            - name: DJANGO_SECRET_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: backend
+                  key: key
           volumeMounts:
             - name: data
               mountPath: /data
@@ -254,3 +266,11 @@ spec:
             name: images
             port:
               name: http
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: backend
+type: Opaque
+data:
+  key: c2VjcmV0
