--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,6 +13,7 @@ djangorestframework-simplejwt = "^4.7.2"
 djoser = "^2.1.0"
 Pillow = "^8.3.1"
 django-imagekit = "^4.0.2"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 black = "^21.6b0"
