Use gunicorn as wsgi server in production image

--- a/charts/birthday-calendar/templates/backend-deployment.yaml
+++ b/charts/birthday-calendar/templates/backend-deployment.yaml
@@ -59,6 +59,7 @@ spec:
       initContainers:
         - name: db-migration
           image: "{{ .Values.images.backend.repository }}:{{ .Values.images.backend.tag | default .Chart.AppVersion }}"
+          command: ["python", "manage.py"]
           args:
             - migrate
           env:
