Use backend key in helm chart from values.yaml

--- a/charts/birthday-calendar/values.yaml
+++ b/charts/birthday-calendar/values.yaml
@@ -35,6 +35,7 @@ backend:
   service:
     port: 80
     name: backend
+  key: "override this in production to be an actual secret key"
 
 images:
   frontend:
