--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ build:
     - mkdir -p /kaniko/.docker
     - echo "{\"auths\":{\"$CI_REGISTRY\":{\"auth\":\"$(echo -n ${CI_REGISTRY_USER}:${CI_REGISTRY_PASSWORD} | base64)\"}}}" > /kaniko/.docker/config.json
     - wget -O /kaniko/ssl/certs/additional-ca-cert-bundle.crt http://authority.kummer.local/ca.crt
-    - /kaniko/executor --context $CI_PROJECT_DIR/backend --dockerfile $CI_PROJECT_DIR/backend/Dockerfile --destination $CI_REGISTRY_IMAGE/backend:$CI_COMMIT_TAG
+    - /kaniko/executor --context $CI_PROJECT_DIR/backend --dockerfile "$CI_PROJECT_DIR/backend/docker-images/production" --destination $CI_REGISTRY_IMAGE/backend:$CI_COMMIT_TAG
     - /kaniko/executor --context $CI_PROJECT_DIR/frontend --dockerfile $CI_PROJECT_DIR/frontend/Dockerfile --destination $CI_REGISTRY_IMAGE/frontend:$CI_COMMIT_TAG
   rules:
     - if: $CI_COMMIT_TAG
