--- a/charts/birthday-calendar/values.yaml
+++ b/charts/birthday-calendar/values.yaml
@@ -59,7 +59,7 @@ ingress:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
+    - host: "birthdays.amit.local"
       paths:
         - path: /
           pathType: Prefix
